--- a/styles.css
+++ b/styles.css
@@ -204,3 +204,65 @@ main {
   right: -20%;
   z-index: -2;
 }
+
+/* TABLET RESPONSIVE */
+@media (max-width: 1300px)  {
+  header {
+    padding: 1rem .5rem;
+  }
+
+  .content {
+    margin-top: 85%;
+  }
+
+  .robot-3d {
+    scale: .8;
+    top: -20%;
+    right: 2%;
+  }
+}
+
+/* MOBILE RESPONSIVE */
+@media (max-width: 768px) {
+  header {
+    padding: 1rem .1rem;
+  }
+  nav {
+    display: none;
+  }
+  header h1 {
+    font-size: 2rem;
+  }
+  .btn-signing {
+    padding: .6rem 1.5rem;
+  }
+  .content {
+    margin-top: 25rem;
+    max-width: 30rem;
+    margin-left: 10%;
+  }
+  .tag-box {
+    width: 12rem;
+  }
+  .robot-3d {
+    scale: .5;
+    top: -25%;
+    right: 0;
+  }
+  .content h1{
+    font-size: 2.5rem;
+  }
+  .description {
+    font-size: 1rem;
+  }
+
+  .btn-documentation {
+    font-size: .8rem;
+    padding: .8rem 1.2rem;
+  }
+  .btn-signing-main {
+    font-size: .8rem;
+    padding: .8rem 2rem;
+  }
+
+}
